--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==2.0.1
 Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.46  # ใช้เวอร์ชันนี้เพื่อลดปัญหาความไม่เข้ากัน
 Werkzeug==2.0.3
 gunicorn==20.0.4
